# docuverse

./: README.md  main.py  pyproject.toml
app/: app.py
app/api/: dependency.py
app/config/: config.py
app/db/: database.py
app/enums/: chat_roles.py  otp_operation_type.py  row_status.py  user_types.py
app/exceptions/: base_exception.py  chat_exception.py  common_exception.py  document_exception.py  handler.py  otp_exception.py  s3_exceptions.py  user_exceptions.py
app/models/: audit_base.py  chat_model.py  document_chunk_model.py  document_model.py  otp_model.py  user_model.py
app/repositories/: chat_repository.py  document_chunk_repository.py  document_repository.py  otp_repository.py  user_repository.py
app/routing/: chat_router.py  document_router.py  file_upload_router.py  hello_router.py  otp_router.py  user_router.py
app/schemas/: base_response.py  base_schema.py  chat_schemas.py  chunk_schemas.py  document_schemas.py  otp_schemas.py  rerank_schemas.py  retrieval_schemas.py  user_schemas.py  vector_schemas.py
app/services/: chat_service.py  document_service.py  embedding_service.py  file_service.py  llm_service.py  otp_service.py  reranker_service.py  retrieval_service.py  user_service.py
app/utils/: chunking_utils.py  jwt_utils.py  logging_utils.py  password_utils.py  pdf_utils.py  redis_utils.py  s3_utils.py  string_generation.py
docs/: API_DOCUMENTATION.md
