[project]
name = "docuverse"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "bcrypt>=5.0.0",
    "boto3>=1.42.67",
    "fastapi>=0.135.1",
    "flashrank>=0.2.10",
    "langchain-text-splitters>=1.1.1",
    "pdfplumber>=0.11.9",
    "pinecone>=8.1.0",
    "pinecone-text>=0.11.0",
    "pydantic-settings>=2.13.1",
    "pydantic[email]>=2.12.5",
    "pyjwt>=2.11.0",
    "pymupdf>=1.27.2",
    "pymupdf4llm>=1.27.2.1",
    "pymysql>=1.1.2",
    "python-multipart>=0.0.22",
    "rank-bm25>=0.2.2",
    "redis>=7.4.0",
    "requests>=2.32.5",
    "sentence-transformers>=5.3.0",
    "sqlalchemy>=2.0.48",
    "uvicorn>=0.41.0",
]
